--- a/src/lab/exp2/goal.html
+++ b/src/lab/exp2/goal.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="goal.css">
 <script src="goal1.js"></script>
+ <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <body>
     <h1>Experiment </h1>
@@ -12,10 +13,15 @@
     <option  value="english" id="english">English</option>
     <option value="hindi" id="hindi">Hindi</option>
     </select><br><br>
+    </select><br><br><br>
     <p id="line1"></p>
     <p id="line2"></p>
+    <p id="p1"></p>
+
+    <p id="p1"></p><br><br><br>
+    <p id="p2"></p>
+    <p id="p4"></p>
+    <p id="p3"></p><br>
+    <button id="sen2"  style="visibility: hidden;">Re-form the sentence</button>
     </center>
     </section>
-
-</body>
-</html>  
