--- a/src/lab/exp2/goal.html
+++ b/src/lab/exp2/goal.html
@@ -12,16 +12,16 @@
     <option value="none">---Select Language---</option>
     <option  value="english" id="english">English</option>
     <option value="hindi" id="hindi">Hindi</option>
-    </select><br><br>
     </select><br><br><br>
+    </select><br><br><br><br>
     <p id="line1"></p>
     <p id="line2"></p>
-    <p id="p1"></p>
-
     <p id="p1"></p><br><br><br>
     <p id="p2"></p>
     <p id="p4"></p>
     <p id="p3"></p><br>
     <button id="sen2"  style="visibility: hidden;">Re-form the sentence</button>
+    <button id="sen2"  style="visibility: hidden;" onclick="reset()">Re-form the sentence</button>
     </center>
     </section>
+
