--- a/src/lab/exp2/goal.html
+++ b/src/lab/exp2/goal.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>SERC PROJECT</title>
   <link rel="stylesheet" href="goal.css">
 <script src="goal1.js"></script>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -9,19 +10,19 @@
     <h1>Experiment </h1>
     <center>
     <select class="select" onchange="func()">
+    <select class="select" onchange="func1()">
     <option value="none">---Select Language---</option>
     <option  value="english" id="english">English</option>
     <option value="hindi" id="hindi">Hindi</option>
-    </select><br><br><br>
-    </select><br><br><br><br>
-    <p id="line1"></p>
-    <p id="line2"></p>
-    <p id="p1"></p><br><br><br>
+@@ -19,7 +20,8 @@ <h1>Experiment </h1>
     <p id="p2"></p>
     <p id="p4"></p>
     <p id="p3"></p><br>
-    <button id="sen2"  style="visibility: hidden;">Re-form the sentence</button>
     <button id="sen2"  style="visibility: hidden;" onclick="reset()">Re-form the sentence</button>
+    <button id="btn1"  style="visibility: hidden;" onclick="resetfunc2()">Re-form the sentence</button><br/>
+    <button id="btn2" style="visibility: hidden;">Check the correctness of this sentence</button>
     </center>
     </section>
 
+</body>
+</html> 
