--- a/src/lab/exp2/goal.html
+++ b/src/lab/exp2/goal.html
@@ -9,20 +9,22 @@
 <body>
     <h1>Experiment </h1>
     <center>
-    <select class="select" onchange="func()">
     <select class="select" onchange="func1()">
     <option value="none">---Select Language---</option>
     <option  value="english" id="english">English</option>
     <option value="hindi" id="hindi">Hindi</option>
-@@ -19,7 +20,8 @@ <h1>Experiment </h1>
+    </select><br><br><br><br>
+    <p id="line1"></p>
+    <p id="line2"></p>
+    <p id="p1"></p><br><br><br>
     <p id="p2"></p>
     <p id="p4"></p>
     <p id="p3"></p><br>
-    <button id="sen2"  style="visibility: hidden;" onclick="reset()">Re-form the sentence</button>
-    <button id="btn1"  style="visibility: hidden;" onclick="resetfunc2()">Re-form the sentence</button><br/>
-    <button id="btn2" style="visibility: hidden;">Check the correctness of this sentence</button>
+  <button id="btn1"  style="visibility: hidden;" onclick="resetfunc2()">Re-form the sentence</button><br/><br/>
+    <button id="btn2" style="visibility: hidden;" onclick="rightorwrong()">Check the correctness of this sentence</button><br/><br/>
+    <p id="ans"></p>
     </center>
     </section>
 
 </body>
-</html> 
+</html>  
