--- a/src/lab/exp2/goal.html
+++ b/src/lab/exp2/goal.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
     <title>SERC PROJECT</title>
   <link rel="stylesheet" href="goal.css">
@@ -20,9 +18,12 @@
     <p id="p2"></p>
     <p id="p4"></p>
     <p id="p3"></p><br>
-  <button id="btn1"  style="visibility: hidden;" onclick="resetfunc2()">Re-form the sentence</button><br/><br/>
+    <button id="btn1"  style="visibility: hidden;" onclick="resetfunc2()">Re-form the sentence</button><br/><br/>
     <button id="btn2" style="visibility: hidden;" onclick="rightorwrong()">Check the correctness of this sentence</button><br/><br/>
-    <p id="ans"></p>
+    <p id="ans"></p><br/><br/>
+    <p id="ID1"></p>
+    <button id="ID1" style="visibility: hidden;" onclick="crtans()">Get Correct Sentence</button><br/><br/>
+    <p id="dispcrtans"></p>
     </center>
     </section>
 
